remove data.json

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
-<html ng-app="App" >
+<html ng-app>
 <head>
     <meta charset="utf-8">
     <title>Timeline</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
-    <script src="script.js"></script>
+    <script src="data.js"></script>
     <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
-<body ng-controller="DataCtrl">
+<body  ng-controller="Ctrl">
     <div class="container">
         <div class="row-fluid">
           <div class="span12">
