--- a/index.html
+++ b/index.html
@@ -9,35 +9,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body  ng-controller="Ctrl">
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand" href="#">Web Front-end Technology Timeline</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row-fluid">
-          <div class="span12">
-              <table class="table table-striped">
-                  <thead>
-                      <tr>
-                          <th></th>
-                          <th>
-                              <a href="" ng-click="predicate = 'date'; reverse=false">Date</a>
-                              (<a href ng-click="predicate = '-date'; reverse=false">^</a>)
-                          </th>
-                          <th>
-                              <a href="" ng-click="predicate = 'name'; reverse=false">Name</a>
-                              (<a href ng-click="predicate = '-name'; reverse=false">^</a>)
-                          </th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr ng-repeat="d in data | orderBy:'date'">
-                          <td>{{$index+1}}</td>
-                          <td><em>{{d.date}}</em></td>
-                          <td>
-                              <span>{{d.name}}</span>
-                              <div class="descr">{{d.description}}</div>
-                          </td>
-                      </tr>
-                  </tbody>
-              </table>
-          </div>
+            <div class="span12">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>
+                                Date
+                            </th>
+                            <th>
+                                Name
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="d in data | orderBy:'date'">
+                            <td>{{$index+1}}</td>
+                            <td><em>{{d.date}}</em></td>
+                            <td>
+                                <span>{{d.name}}</span>
+                                <div class="descr">{{d.description}}</div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         
     </div>
